test/classes/delete-free/lifetimes/bad-for-expr.good
bad-for-expr.chpl:3: In function 'badForExpr':
bad-for-expr.chpl:4: error: Scoped variable would outlive the value it is set to
